developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Credit_Check_Enquiry__c/OJSERLIB__VEDA_Credit_Check_Enquiry__c.object-meta.xml
<CustomObject>
    <label>VEDA Credit Check Enquiry</label>
    <nameField>
        <label>VEDA Enquiry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VEDA Credit Check Enquiries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>