developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Credit_Check_Enquiry__c/fields/OJSERLIB__account_Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__account_Type__c</fullName>
    <label>account Type</label>
    <length>75</length>
    <type>Text</type>
</CustomField>