developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Credit_Check_Enquiry__c/fields/OJSERLIB__AccountID__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__AccountID__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VEDA Credit Check Enquiries</relationshipLabel>
    <relationshipName>VEDA_Credit_Check_Enquiries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>