developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Credit_Check_Enquiry__c/fields/OJSERLIB__Enquirer__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Enquirer__c</fullName>
    <label>Enquirer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>