developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Credit_Check_Enquiry__c/fields/OJSERLIB__Enquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Enquiry_Date__c</fullName>
    <label>Enquiry Date</label>
    <type>Date</type>
</CustomField>