developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Credit_Check_Enquiry__c/fields/OJSERLIB__IsCommercial__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsCommercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCommercial</label>
    <type>Checkbox</type>
</CustomField>