developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Credit_Check_Enquiry__c/fields/OJSERLIB__VEDA_Public_and_Credit_HistoryID__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Public_and_Credit_HistoryID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VEDA Public and Credit History</label>
    <referenceTo>OJSERLIB__VEDA_Public_and_Credit_History_Info__c</referenceTo>
    <relationshipLabel>VEDA Credit Check Enquiries</relationshipLabel>
    <relationshipName>VEDA_Credit_Check_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>