developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Credit_Check_Enquiry__c/fields/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDACommercial_Credit_Assess_Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VEDACommercial Credit Assess Individual</label>
    <referenceTo>OJSERLIB__VEDACommercial_Credit_Assess_Individual__c</referenceTo>
    <relationshipLabel>VEDA Credit Check Enquiries</relationshipLabel>
    <relationshipName>VEDA_Credit_Check_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>